--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
 
   <!-- content -->
   <section
-    class="bg-base-200 flex-1 m-4 md:mr-0 p-10 rounded-xl overflow-hidden flex flex-col items-center gap-10 -md:min-w-[calc(100vw-2rem)]"
+    class="bg-base-200 flex-1 m-4 md:mr-0 -md:p-4 md:p-10 rounded-xl overflow-hidden flex flex-col items-center gap-10 -md:min-w-[calc(100vw-2rem)]"
   >
     <strong>گزارش روزانه</strong>
 
